# SeleneJS

./: CMakeLists.txt  README.md
example/: Test.cpp
include/: selenejs.h
include/selenejs/: BaseFun.h  Class.h  ClassFun.h  ClassObj.h  Ctor.h  Dtor.h  ExceptionHandler.h  ExceptionTypes.h  Fun.h  JSRef.h  MetatableRegistry.h  Obj.h  ObjFun.h  Registry.h  ResourceHandler.h  Selector.h  State.h  Tuple.h  function.h  lmetatable.h  metatable.h  primitives.h  references.h  refs.h  traits.h  util.h
test/: Test.cpp  class_tests.h  error_tests.h  exception_tests.h  interop_tests.h  metatable_tests.h  obj_tests.h  reference_tests.h  selector_tests.h  test.js  test_class.js  test_error.js  test_exceptions.js  test_gc.js  test_metatable .js  test_metatable.js  test_ref.js  test_syntax_error.js
